Refactor embassy appointment scheduler configuration

--- a/tests/eas-core/eas-core.tests.fsproj
+++ b/tests/eas-core/eas-core.tests.fsproj
@@ -18,6 +18,9 @@
     <Content Include="test_data\validation_page_valid_response.html" >
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="test_data\validation_page_invalid_val_response.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
