Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/eas-worker.fsproj
+++ b/src/eas-worker/eas-worker.fsproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\eas-core\eas-core.fsproj" />
   </ItemGroup>
   
+  <ItemGroup>
+    <Folder Include="bin\Debug\net8.0\captcha\" />
+  </ItemGroup>
+  
 </Project>
