--- a/src/eas-core/eas-core.fsproj
+++ b/src/eas-core/eas-core.fsproj
@@ -10,6 +10,9 @@
     <Compile Include="Core.fs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="2.88.8" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\submodules\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
     <ProjectReference Include="..\..\submodules\fsharp-persistence\src\fsharp-persistence.fsproj" />
     <ProjectReference Include="..\..\submodules\fsharp-web\src\fsharp-web.fsproj" />
