Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/eas-worker.fsproj
+++ b/src/eas-worker/eas-worker.fsproj
@@ -27,7 +27,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Folder Include="bin\Debug\net8.0\captcha\" />
+    <Folder Include="bin\Debug\net8.0\" />
   </ItemGroup>
   
 </Project>
