Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/eas-worker.fsproj
+++ b/src/eas-worker/eas-worker.fsproj
@@ -30,4 +30,8 @@
     <Folder Include="bin\Debug\net8.0\" />
   </ItemGroup>
   
+  <ItemGroup>
+    <EmbeddedResource Remove="bin\**" />
+  </ItemGroup>
+  
 </Project>
