--- a/tests/eas-core/eas-core.tests.fsproj
+++ b/tests/eas-core/eas-core.tests.fsproj
@@ -21,6 +21,9 @@
     <Content Include="test_data\validation_page_invalid_requires_confirmation.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="test_data\captcha_image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
