--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -15,7 +15,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Compile Include="Persistence.fs" />
+    <Compile Include="Task.fs" />
     <Compile Include="Embassies.fs" />
     <Compile Include="Countries.fs" />
     <Compile Include="Program.fs" />
@@ -23,7 +23,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
-    <ProjectReference Include="..\eas-core\eas-core.fsproj" />
+    <ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj" />
   </ItemGroup>
   
   <ItemGroup>
