--- a/tests/embassy-access-core/embassy-access-core-tests.fsproj
+++ b/tests/embassy-access-core/embassy-access-core-tests.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="test_data\start_page_response.html">
+    <Content Include="test_data\initial_page_response.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="test_data\captcha_image.png">
@@ -21,34 +21,34 @@
     <Content Include="test_data\validation_page_valid_response.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_1.html">
+    <Content Include="test_data\appointments_page_empty_result_1.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_2.html">
+    <Content Include="test_data\appointments_page_empty_result_2.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_3.html">
+    <Content Include="test_data\appointments_page_empty_result_3.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_4.html">
+    <Content Include="test_data\appointments_page_empty_result_4.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_5.html">
+    <Content Include="test_data\appointments_page_empty_result_5.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_6.html">
+    <Content Include="test_data\appointments_page_empty_result_6.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_empty_result_7.html">
+    <Content Include="test_data\appointments_page_empty_result_7.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_has_result_1.html">
+    <Content Include="test_data\appointments_page_has_result_1.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_has_result_2.html">
+    <Content Include="test_data\appointments_page_has_result_2.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\calendar_page_has_result_3.html">
+    <Content Include="test_data\appointments_page_has_result_3.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
