--- a/tests/embassy-access-core/embassy-access-core-tests.fsproj
+++ b/tests/embassy-access-core/embassy-access-core-tests.fsproj
@@ -9,7 +9,7 @@
     <Content Include="test_data\initial_page_response.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\captcha_image.png">
+    <Content Include="test_data\captcha.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="test_data\validation_page_has_error.html">
