--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Trace
+    Default: Information
 
 Worker:
   Name: Scheduler
@@ -11,6 +11,28 @@ Worker:
       Parallel: true
       Steps:
         - Name: Belgrade
+          Steps:
+            - Name: Russian
+              Parallel: true
+              Recursively: true
+              Steps:
+                - Name: Search Appointments
+                  Duration: 00:03:00
+                - Name: Notify users
+                  Schedule:
+                    IsEnabled: true
+                    Delay: 00:00:10
+              Schedule:
+                IsEnabled: true
+                Limit: 2
+                Workdays: mon,tue,wed,thu,fri,sat,sun
+          Schedule:
+            IsEnabled: true
+            Workdays: mon,tue,wed,thu,fri,sat,sun
+    - Name: Germany
+      Parallel: true
+      Steps:
+        - Name: Berlin
           Steps:
             - Name: Russian
               Parallel: true
