--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -6,8 +6,9 @@
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
     <Compile Include="Persistence.fs" />
-    <Compile Include="Web.fs" />
-    <Compile Include="Core.fs" />
+    <Compile Include="embassies\russian\Domain.fs" />
+    <Compile Include="embassies\russian\Core.fs" />
+    <Compile Include="embassies\russian\Api.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.8" />
