--- a/tests/embassy-access-tests.fsproj
+++ b/tests/embassy-access-tests.fsproj
@@ -6,55 +6,55 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="test_data\initial_page_response.html">
+    <Content Include="embassies\russian\test_data\initial_page_response.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\captcha.png">
+    <Content Include="embassies\russian\test_data\captcha.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\validation_page_has_error.html">
+    <Content Include="embassies\russian\test_data\validation_page_has_error.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\validation_page_requires_confirmation.html">
+    <Content Include="embassies\russian\test_data\validation_page_requires_confirmation.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\validation_page_valid_response.html">
+    <Content Include="embassies\russian\test_data\validation_page_valid_response.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_1.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_1.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_2.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_2.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_3.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_3.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_4.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_4.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_5.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_5.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_6.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_6.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_empty_result_7.html">
+    <Content Include="embassies\russian\test_data\appointments_page_empty_result_7.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_has_result_1.html">
+    <Content Include="embassies\russian\test_data\appointments_page_has_result_1.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_has_result_2.html">
+    <Content Include="embassies\russian\test_data\appointments_page_has_result_2.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="test_data\appointments_page_has_result_3.html">
+    <Content Include="embassies\russian\test_data\appointments_page_has_result_3.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Core.fs" />
+    <Compile Include="embassies\russian\Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
