--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Persistence.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Core.fs" />
+    <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="embassies\russian\Api.fs" />
     <Compile Include="Api.fs" />
   </ItemGroup>
