--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="embassies\russian\Deps.fs" />
     <Compile Include="embassies\russian\Api.fs" />
     <Compile Include="Api.fs" />
+    <Compile Include="Deps.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="2.88.8" />
