--- a/tests/embassy-access-tests.fsproj
+++ b/tests/embassy-access-tests.fsproj
@@ -54,7 +54,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="embassies\russian\Tests.fs" />
+    <Compile Include="embassies\russian\Test.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
