--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Constants.fs" />
+    <Compile Include="Constant.fs" />
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
     <Compile Include="persistence\Filter.fs" />
