--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <Compile Include="Constant.fs" />
     <Compile Include="Domain.fs" />
+    <Compile Include="SerDe.fs" />
     <Compile Include="Mapper.fs" />
     <Compile Include="persistence\Filter.fs" />
     <Compile Include="persistence\Command.fs" />
