Refactor persistence filter to include auto and manual confirmation options

--- a/tests/embassy-access-tests.fsproj
+++ b/tests/embassy-access-tests.fsproj
@@ -51,6 +51,9 @@
     <Content Include="embassies\russian\test_data\appointments_page_has_result_3.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="embassies\russian\test_data\confirmation_page_has_result_1.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
