--- a/tests/embassy-access-tests.fsproj
+++ b/tests/embassy-access-tests.fsproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="embassies\russian\test_data\confirmation_current_data.txt" />
+    <None Include="embassies\russian\test_data\confirmation_js_request.js" />
+    <Content Include="embassies\russian\test_data\confirmation_target_data.txt" />
     <Content Include="embassies\russian\test_data\initial_page_response.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -19,6 +22,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="embassies\russian\test_data\validation_page_valid_response.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="embassies\russian\test_data\validation_page_has_confirmation.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="embassies\russian\test_data\validation_page_request_deleted.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="embassies\russian\test_data\appointments_page_empty_result_1.html">
@@ -52,6 +61,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="embassies\russian\test_data\confirmation_page_has_result_1.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="embassies\russian\test_data\confirmation_page_has_result_2.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
