Comment out tasks for multiple countries, update configs
Commented out tasks for Albania, Bosnia, Finland, France, Germany,
Hungary, Ireland, Montenegro, Netherlands, Slovenia, and Switzerland
in `Program.fs`. The task for Serbia remains active.

In `appsettings.yaml`, disabled the `Search Appointments` step and
`CommonSchedule`. Increased the delay for `Search Appointments` to
`00:05:00`. Added a new `Russian` step under `Serbia` with a sub-step
`Search Appointments` and enabled its schedule. Enabled the schedule
for the `Serbia` step with workdays set to all days.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -12,14 +12,14 @@ CommonStep: &CommonStep
     - Name: Search Appointments
       Duration: 00:03:00
   Schedule:
-    Enabled: true
+    Enabled: false
     Limit: 3
-    Delay: 00:00:20
+    Delay: 00:05:00
     Workdays: mon,tue,wed,thu,fri,sat,sun
 
 CommonSchedule: &CommonSchedule
   Schedule:
-    Enabled: true
+    Enabled: false
     Workdays: mon,tue,wed,thu,fri,sat,sun
 
 Worker:
@@ -30,8 +30,19 @@ Worker:
       Steps:
         - Name: Belgrade
           Steps:
-            <<: *CommonStep
-          <<: *CommonSchedule
+            - Name: Russian
+              Recursively: true
+              Steps:
+                - Name: Search Appointments
+                  Duration: 00:03:00
+              Schedule:
+                Enabled: true
+                Limit: 20
+                Delay: 00:05:00
+                Workdays: mon,tue,wed,thu,fri,sat,sun
+          Schedule:
+            Enabled: true
+            Workdays: mon,tue,wed,thu,fri,sat,sun
     - Name: Germany
       Parallel: true
       Steps:
