Update config and refactor F# code for new features
Updated appsettings.yaml:
- Added `Enabled` property to `Search Appointments` task and `Scheduler` worker.
- Changed `Delay` for `Search Appointments` task to `00:01:00`.

Marked `fsharp-infrastructure` and `fsharp-worker` as dirty.

In `Configuration.fs`:
- Added `System.Runtime.CompilerServices` and `System.Text.RegularExpressions` namespaces.
- Replaced `deserialize` with `get` function for better config handling.
- Updated `getSection` to use the new `get` function.

In `Domain.fs`:
- Changed `StartWork` and `StopWork` in `Schedule` type to `DateTime option`.
- Added `Enabled` property to `TaskGraph` type.

In `Graph.fs`:
- Updated `mapSchedule` to use `DateTime option` properties.
- Updated `mapTask` to conditionally include handler based on `Enabled` property.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -10,6 +10,7 @@ CommonStep: &CommonStep
   Recursively: true
   Tasks:
     - Name: Search Appointments
+      Enabled: false
       Duration: 00:03:00
   Schedule:
     Workdays: mon,tue,wed,thu,fri,sat,sun
@@ -22,6 +23,7 @@ CommonSchedule: &CommonSchedule
 
 Worker:
   Name: Scheduler
+  Enabled: true
   Tasks:
     - Name: Serbia
       Parallel: true
@@ -32,11 +34,12 @@ Worker:
               Recursively: true
               Tasks:
                 - Name: Search Appointments
+                  Enabled: true
                   Duration: 00:03:00
               Schedule:
                 Workdays: mon,tue,wed,thu,fri,sat,sun
                 Limit: 20
-                Delay: 00:05:00
+                Delay: 00:01:00
           Schedule:
             Workdays: mon,tue,wed,thu,fri,sat,sun
     - Name: Germany
