Refactor task handling and remove obsolete files
Refactored task handling to use option types for Recursively and Limit. Updated Core.fs, Domain.fs, Graph.fs, and Scheduler.fs accordingly. Modified Core.fs to replace InnerText with InnerHtml and handle <br> tags. Updated Program.fs to add URLs and task handlers for multiple countries. Adjusted appsettings.yaml for logging and worker settings. Removed obsolete confirmation files and their references in embassy-access-tests.fsproj. Marked fsharp-worker subproject commit as dirty.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -7,15 +7,13 @@ Logging:
 CommonStep: &CommonStep
   Name: Russian
   Parallel: true
-  Recursively: true
+  Limit: 3
   Tasks:
     - Name: Search Appointments
       Enabled: false
       Duration: 00:03:00
   Schedule:
     Workdays: mon,tue,wed,thu,fri,sat,sun
-    Limit: 3
-    Delay: 00:01:00
 
 CommonSchedule: &CommonSchedule
   Schedule:
@@ -31,15 +29,14 @@ Worker:
         - Name: Belgrade
           Tasks:
             - Name: Russian
-              Recursively: true
+              Recursively: 00:00:10
+              Limit: 2
               Tasks:
                 - Name: Search Appointments
                   Enabled: true
                   Duration: 00:03:00
               Schedule:
                 Workdays: mon,tue,wed,thu,fri,sat,sun
-                Limit: 20
-                Delay: 00:01:00
           Schedule:
             Workdays: mon,tue,wed,thu,fri,sat,sun
     - Name: Germany
