Update logging, task handling, and add new functions
- Updated `appsettings.yaml` to change logging level to `Information` and modify task configurations, including the `Await` property.
- Added `testRun` function in `Russian.fs` and updated `addTasks` to use it.
- Marked subproject commits in `fsharp-infrastructure` and `fsharp-worker` as dirty.
- Updated `Yaml` module in `Configuration.fs` to use `data.ToString()` and removed `inline` keyword from `findValue` in `get` function.
- Added `Option` module with `toResult` function in `DSL.fs`.
- Renamed `startTask` to `runTask` in `Core.fs` and updated task handling logic to use `Await`.
- Updated `Task` type in `Domain.fs` to include `Await` and replaced `TaskRecursion` with `Recursively`.
- Updated `External` module in `Domain.fs` to replace `TaskRecursion` with `TaskEnabled` including `Await`.
- Renamed `defaultWorkdays` to `DefaultWorkdays` in `Graph.fs` and updated `parseWorkdays` to use it. Added `parseHandler` function and updated `mapTask` to use `Option.toResult` and include `Await`.
- Updated `create` function in `Graph.fs` to include new node creation logic.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Trace
+    Default: Information
 
 RussianTasks: &RussianTasks
   Name: Russian
@@ -10,14 +10,16 @@ RussianTasks: &RussianTasks
   Limit: 3
   Tasks:
     - Name: Search Appointments
-      Enabled: false
+      # Enabled:
+      #   Await: false
       Duration: 00:03:00
   Schedule:
     Workdays: mon,tue,wed,thu,fri,sat,sun
 
 Worker:
   Name: Scheduler
-  Enabled: true
+  Enabled:
+    Await: true
   Tasks:
     - Name: Serbia
       Parallel: true
@@ -26,12 +28,12 @@ Worker:
           Tasks:
             - Name: Russian
               Parallel: true
-              Recursively: 00:00:10
               Limit: 3
+              Recursively: 00:00:10
               Tasks:
                 - Name: Search Appointments
-                  Enabled: true
-                  Parallel: true
+                  Enabled:
+                    Await: true
                   Duration: 00:03:00
               Schedule:
                 Workdays: mon,tue,wed,thu,fri,sat,sun
