--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Trace
+    Default: Debug
 
 Workdays: &Workdays
   Workdays: mon,tue,wed,thu,fri,sat,sun
@@ -11,17 +11,21 @@ SearchAppointments: &SearchAppointments
   Name: Search Appointments
   Enabled: true
   Wait: false
-  Duration: "00:03:00"
+  Duration: "00:01:00"
+
+SearchAppointmentsDisabled: &SearchAppointmentsDisabled
+  Name: Search Appointments
+  Enabled: false
 
 RussianTask: &RussianTask
   Name: Russian
-  Recursively: "00:00:10"
+  Recursively: "00:03:00"
   Parallel: true
   Limit: 3
 
 RussianTaskDisabled: &RussianTaskDisabled
   Name: Russian
-  Limit: 0
+  Parallel: true
 
 Worker:
   Name: Scheduler
@@ -38,7 +42,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 1
+                    TimeShift: 2
                     <<: *Workdays
     
     - Name: Germany
@@ -51,7 +55,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 2
+                    TimeShift: 1
                     <<: *Workdays
         
     - Name: France
@@ -64,7 +68,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 3
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Montenegro
@@ -77,7 +81,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 4
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Ireland
@@ -90,7 +94,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 5
+                    TimeShift: 1
                     <<: *Workdays
 
     - Name: Switzerland
@@ -99,11 +103,11 @@ Worker:
         - Name: Bern
           Parallel: true
           Tasks:
-            - <<: *RussianTask
+            - <<: *RussianTaskDisabled
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 6
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Finland
@@ -116,7 +120,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 7
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Netherlands
@@ -129,7 +133,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 8
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Albania
@@ -142,7 +146,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 9
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Slovenia
@@ -155,7 +159,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 10
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Bosnia
@@ -168,7 +172,7 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 11
+                    TimeShift: 2
                     <<: *Workdays
 
     - Name: Hungary
@@ -181,5 +185,5 @@ Worker:
               Tasks:
                 - <<: *SearchAppointments
                   Schedule:
-                    TimeShift: 12
+                    TimeShift: 2
                     <<: *Workdays
